--- a/dbpopulate/pom.xml
+++ b/dbpopulate/pom.xml
@@ -57,6 +57,15 @@
 			<artifactId>spring-data-dynamodb</artifactId>
 			<version>4.5.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpasyncclient -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpasyncclient</artifactId>
+		    <version>4.1.3</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<repositories>
