--- a/dbpopulate/pom.xml
+++ b/dbpopulate/pom.xml
@@ -16,6 +16,19 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>-Xdebug
+						-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=${debug.port}
+					</jvmArguments>
+					<profiles>
+						<profile>test</profile>
+					</profiles>
+					<executable>true</executable>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -41,39 +54,39 @@
 		</dependency>
 
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>1.5.9.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>1.5.9.RELEASE</version>
 		</dependency>
 
-	    <dependency>
-	       <groupId>com.amazonaws</groupId>
-	       <artifactId>DynamoDBLocal</artifactId>
-	       <version>[1.11,2.0)</version>
-	     </dependency>
-		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>DynamoDBLocal</artifactId>
+			<version>[1.11,2.0)</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.github.derjust</groupId>
 			<artifactId>spring-data-dynamodb</artifactId>
 			<version>4.5.0</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpasyncclient -->
 		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpasyncclient</artifactId>
-		    <version>4.1.3</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
+			<version>4.1.3</version>
 		</dependency>
-		
-		
+
+
 	</dependencies>
 
 	<repositories>
-	    <repository>
-	       <id>dynamodb-local-oregon</id>
-	       <name>DynamoDB Local Release Repository</name>
-	       <url>https://s3-us-west-2.amazonaws.com/dynamodb-local/release</url>
-	    </repository>
+		<repository>
+			<id>dynamodb-local-oregon</id>
+			<name>DynamoDB Local Release Repository</name>
+			<url>https://s3-us-west-2.amazonaws.com/dynamodb-local/release</url>
+		</repository>
 	</repositories>
 
 </project>
